[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/art/Actors/Onionette.png/1.png" type="Texture" id=1]
[ext_resource path="res://assets/art/Actors/Onionette.png/0.png" type="Texture" id=2]
[ext_resource path="res://assets/art/Actors/Onionette.png/5.png" type="Texture" id=3]
[ext_resource path="res://assets/art/Actors/Onionette.png/3.png" type="Texture" id=4]
[ext_resource path="res://assets/art/Actors/Onionette.png/2.png" type="Texture" id=5]
[ext_resource path="res://assets/art/Actors/Onionette.png/4.png" type="Texture" id=6]
[ext_resource path="res://assets/art/Actors/Onionette.png/6.png" type="Texture" id=7]
[ext_resource path="res://assets/art/Actors/Onionette.png/7.png" type="Texture" id=8]
[ext_resource path="res://src/Actors/Onionette.gd" type="Script" id=9]
[ext_resource path="res://assets/art/Actors/Onionette Dead.png/2.png" type="Texture" id=10]
[ext_resource path="res://assets/art/Actors/Onionette Dead.png/1.png" type="Texture" id=11]
[ext_resource path="res://assets/art/Actors/Onionette Dead.png/3.png" type="Texture" id=12]
[ext_resource path="res://assets/art/Actors/Onionette Dead.png/0.png" type="Texture" id=13]
[ext_resource path="res://assets/art/Actors/hp.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "bounce"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 0.5, -2, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 0.5, -2, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.7, 0.8, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1 ), Vector2( 1.5, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.7, 0.8, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1 ), Vector2( 1.1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 1 ), Vector2( 1.5, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LightOccluder2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 0.5, -2, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("LightOccluder2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HealthBar:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -20, -50 ), Vector2( -20, -220 ), Vector2( -20, -250 ), Vector2( -20, -200 ), Vector2( -20, -80 ), Vector2( -20, -50 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -16, -24, 16, -24, 24, -9.30608, 24, 6.69392, 16, 32, -16, 32, -24, 6.69392, -24, -9.30608 )

[node name="Onionette" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 11
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=[
"enemy",
]]
scale = Vector2( 1.5, 1 )
frames = SubResource( 1 )
frame = 5
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1.5, 1 )
shape = SubResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = -2147483646
occluder = SubResource( 4 )
light_mask = -2147483646

[node name="DeadTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -50.0
margin_right = 20.0
margin_bottom = -47.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalHealth" type="Sprite" parent="HealthBar"]
position = Vector2( 20, 2 )
texture = ExtResource( 14 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
